<resources>
    <string name="CardEditorCardDeck">Card deck:</string>
    <string name="about_title">About AnkiDroid</string>
    <string name="advanced_statistics_title">Advanced statistics</string>
    <string name="analytics_summ">You can contribute to AnkiDroid by helping the development team see which features people use</string>
    <string name="analytics_title">Share feature usage</string>
    <string name="answer_buttons_position">Answer buttons position</string>
    <string name="answer_buttons_position_preference">answerButtonPosition</string>
    <string name="automatic_sync_choice">Automatic synchronization</string>
    <string name="automatic_sync_choice_summ">Sync automatically on app start/exit if the last sync was more than 10 minutes ago.</string>
    <string name="button_size">Answer button size</string>
    <string name="button_sync">Sync</string>
    <string name="card_editor_card_scheduling">Scheduling</string>
    <string name="card_zoom">Card zoom</string>
    <string name="cardeditor_title_edit_card">Edit note</string>
    <string name="clear_whiteboard">Clear whiteboard</string>
    <string name="col_path">AnkiDroid directory</string>
    <string name="convert_fen_text">Chess notation support</string>
    <string name="convert_fen_text_summ">Draw chessboard from Forsyth–Edwards Notation. The notation must be enclosed in [fen][/fen] tags.</string>
    <string name="custom_buttons">App bar buttons</string>
    <string name="custom_buttons_summary">Customize which actions appear in the app bar</string>
    <string name="custom_sync_server_title">Custom sync server</string>
    <string name="day_offset">Start of next day</string>
    <string name="day_offset_summ">XXX hours past midnight</string>
    <string name="deck_conf_add">Add</string>
    <string name="deck_conf_add_summ">Create a copy of the current options group</string>
    <string name="deck_conf_autoplay">Automatically play audio</string>
    <string name="deck_conf_current_group">Current group</string>
    <string name="deck_conf_days">XXX day(s)</string>
    <string name="deck_conf_deck_description">Deck description (affects current deck only)</string>
    <string name="deck_conf_easy_bonus">Easy bonus</string>
    <string name="deck_conf_easy_ivl">Easy interval</string>
    <string name="deck_conf_fails">XXX lapse(s)</string>
    <string name="deck_conf_general">General</string>
    <string name="deck_conf_graduating_ivl">Graduating interval</string>
    <string name="deck_conf_group">Options group</string>
    <string name="deck_conf_group_summ">Changes to deck group options will affect multiple decks. If you wish to change only the current deck, please add a new options group first</string>
    <string name="deck_conf_ivl_fct">Interval modifier</string>
    <string name="deck_conf_leech_action">Leech action</string>
    <string name="deck_conf_leech_thres">Leech threshold</string>
    <string name="deck_conf_lps_cards">Lapses</string>
    <string name="deck_conf_manage">Group management</string>
    <string name="deck_conf_max_ivl">Maximum interval</string>
    <string name="deck_conf_max_rev">Maximum reviews/day</string>
    <string name="deck_conf_max_time">Maximal answer time</string>
    <string name="deck_conf_min_ivl">Minimum interval</string>
    <string name="deck_conf_new_bury">Bury related new cards</string>
    <string name="deck_conf_new_bury_summ">Related new cards are buried until the next day</string>
    <string name="deck_conf_new_cards">New cards</string>
    <string name="deck_conf_new_cards_day">New cards/day</string>
    <string name="deck_conf_new_lps_ivl">New interval</string>
    <string name="deck_conf_order">Order</string>
    <string name="deck_conf_percent">XXX %</string>
    <string name="deck_conf_reminders">Reminders</string>
    <string name="deck_conf_reminders_enabled">Enable reminder notifications for decks in this deck group</string>
    <string name="deck_conf_reminders_time">Remind at</string>
    <string name="deck_conf_remove">Remove</string>
    <string name="deck_conf_remove_message">Remove current options group?</string>
    <string name="deck_conf_remove_title">Remove</string>
    <string name="deck_conf_rename">Rename</string>
    <string name="deck_conf_replayq">Replay question</string>
    <string name="deck_conf_replayq_summ">When answer shown, replay both question and answer audio</string>
    <string name="deck_conf_reset_message">Restore current options group to default values?</string>
    <string name="deck_conf_reset_title">Restore defaults</string>
    <string name="deck_conf_rev_bury">Bury related reviews</string>
    <string name="deck_conf_rev_bury_summ">Related reviews are buried until the next day</string>
    <string name="deck_conf_rev_cards">Reviews</string>
    <string name="deck_conf_seconds">XXX seconds</string>
    <string name="deck_conf_set_subdecks">Set for all subdecks</string>
    <string name="deck_conf_set_subdecks_message">Set current options group for all of this deck’s subdecks?</string>
    <string name="deck_conf_set_subdecks_title">Set for all subdecks</string>
    <string name="deck_conf_start_ease">Starting ease</string>
    <string name="deck_conf_steps">Steps (in minutes)</string>
    <string name="deck_conf_timer">Show answer timer</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_positive_remove">Remove</string>
    <string name="dialog_positive_restore">Restore</string>
    <string name="dialog_positive_set">Set</string>
    <string name="dictionary">Lookup dictionary</string>
    <string name="double_scrolling_gap">Double scrolling</string>
    <string name="double_scrolling_gap_summ">Double the scroll gap with eReader</string>
    <string name="enable_api_summary">Let other apps connect to AnkiDroid and read / write data without your intervention</string>
    <string name="enable_api_title">Enable AnkiDroid API</string>
    <string name="enable_whiteboard">Enable whiteboard</string>
    <string name="error_reporting_choice">Error reporting mode</string>
    <string name="fix_hebrew_text">Fix for Hebrew vowels</string>
    <string name="fix_hebrew_text_summ">Workaround for rendering Hebrew vowels correctly.</string>
    <string name="force_full_sync_summary">On next sync, force changes in one direction</string>
    <string name="force_full_sync_title">Force full sync</string>
    <string name="fullscreen_review">Fullscreen mode</string>
    <string name="hide_whiteboard">Hide whiteboard</string>
    <string name="html_javascript_debugging">HTML / Javascript Debugging</string>
    <string name="html_javascript_debugging_summ">Enable remote WebView connections, and save card HTML to AnkiDroid directory</string>
    <string name="image_zoom">Image zoom</string>
    <string name="language">Language</string>
    <string name="learn_cutoff">Learn ahead limit</string>
    <string name="learn_cutoff_summ">XXX min</string>
    <string name="menu_add_note">Add note</string>
    <string name="menu_bury">Bury</string>
    <string name="menu_delete_note">Delete note</string>
    <string name="menu_mark_note">Mark note</string>
    <string name="menu_select">Select text</string>
    <string name="menu_suspend">Suspend</string>
    <string name="more_scrolling_buttons">eReader</string>
    <string name="more_scrolling_buttons_summ">Also use kanji/katakana, emoji/kao-moji buttons for scrolling</string>
    <string name="new_spread">New card position</string>
    <string name="notification_minimum_cards_due_blink">Blink light</string>
    <string name="notification_minimum_cards_due_vibrate">Vibrate</string>
    <string name="notification_pref">Notifications</string>
    <string name="notification_pref_title">Notify when</string>
    <string name="pref_backup_max">Max number of backups</string>
    <string name="pref_cat_advanced">Advanced</string>
    <string name="pref_cat_advanced_summ">Optimization and experimental features</string>
    <string name="pref_cat_appearance">Appearance</string>
    <string name="pref_cat_appearance_summ">Change themes and default font</string>
    <string name="pref_cat_automatic_display">Automatic display answer</string>
    <string name="pref_cat_flashcard">Display</string>
    <string name="pref_cat_general">AnkiDroid</string>
    <string name="pref_cat_general_summ">General settings</string>
    <string name="pref_cat_gestures">Gestures</string>
    <string name="pref_cat_gestures_summ">Use taps and swipes instead of buttons</string>
    <string name="pref_cat_performance">Performance</string>
    <string name="pref_cat_plugins">Plugins</string>
    <string name="pref_cat_reviewer_behaviour">Behavior</string>
    <string name="pref_cat_reviewing">Reviewing</string>
    <string name="pref_cat_reviewing_summ">Non-deck-specific reviewer settings</string>
    <string name="pref_cat_whiteboard">Whiteboard</string>
    <string name="pref_cat_workarounds">Workarounds</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_keep_screen_on_summ">Disable screen timeout</string>
    <string name="preference_summary_literal">XXX</string>
    <string name="preference_summary_percentage">XXX%</string>
    <string name="replay_audio">Replay audio</string>
    <string name="reset_languages">Reset languages</string>
    <string name="reset_languages_question">Reset all language assignments?</string>
    <string name="reset_languages_summ">Reset language assignments (for text to speech and dictionaries) for all decks</string>
    <string name="safe_display">Safe display mode</string>
    <string name="safe_display_summ">Disable all animations and use safer method for drawing cards. E-ink devices may require this.</string>
    <string name="select_tts">Set TTS language</string>
    <string name="show_estimates">Show button time</string>
    <string name="show_estimates_summ">Show next review time on answer buttons</string>
    <string name="show_eta">Show ETA</string>
    <string name="show_eta_summ">Show remaining time</string>
    <string name="show_progress">Show remaining</string>
    <string name="show_progress_summ">Show remaining card count</string>
    <string name="study_options">Options</string>
    <string name="sync_account">AnkiWeb account</string>
    <string name="sync_account_summ_logged_out">Not logged in</string>
    <string name="sync_fetch_missing_media">Fetch media on sync</string>
    <string name="sync_fetch_missing_media_summ">Automatically fetch missing media when syncing</string>
    <string name="time_limit">Timebox time limit</string>
    <string name="time_limit_summ">XXX min</string>
    <string name="timeout_answer_seconds">Time to show answer</string>
    <string name="timeout_answer_seconds_summ">XXX s</string>
    <string name="timeout_answer_summ">Show answer automatically without user input. Delay includes time for automatically played audio files.</string>
    <string name="timeout_answer_text">Automatic display answer</string>
    <string name="timeout_question_seconds">Time to show next question</string>
    <string name="timeout_question_seconds_summ">XXX s</string>
    <string name="tts">Text to speech</string>
    <string name="tts_summ">Reads out question and answer if no sound file is included</string>
    <string name="undo">Undo</string>
    <string name="use_current">Deck for new cards</string>
    <string name="use_input_tag">Type answer into the card</string>
    <string name="use_input_tag_summ">Use a text input box inside the card to type in the answer</string>
    <string name="vertical_centering">Center align</string>
    <string name="vertical_centering_summ">Center the content of cards vertically</string>
    <string name="whiteboard_black">Black strokes</string>
    <string name="whiteboard_black_summ">Uses less memory, unless in night mode</string>
    <string name="whiteboard_stroke_width">Stroke width</string>
</resources>