<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_cat_advanced" android:key="pref_screen_advanced" android:summary="@string/pref_cat_advanced_summ"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://arbitrary.app.namespace/com.ichi2.anki">
    <EditTextPreference android:title="@string/col_path" android:key="deckPath" android:summary="@string/preference_summary_literal" android:defaultValue="/sdcard/AnkiDroid" />
    <Preference android:title="@string/force_full_sync_title" android:key="force_full_sync" android:summary="@string/force_full_sync_summary" />
    <Preference android:title="@string/custom_sync_server_title" android:key="custom_sync_server_link" />
    <PreferenceCategory android:title="@string/pref_cat_performance">
        <com.ichi2.ui.SeekBarPreference android:max="10" android:text="" android:title="@string/pref_backup_max" android:key="backupMax" android:summary="@string/preference_summary_literal" android:defaultValue="8" app:interval="1" app:min="0" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_workarounds" android:key="category_workarounds">
        <CheckBoxPreference android:title="@string/safe_display" android:key="safeDisplay" android:summary="@string/safe_display_summ" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_input_tag" android:key="useInputTag" android:summary="@string/use_input_tag_summ" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/fix_hebrew_text" android:key="fixHebrewText" android:summary="@string/fix_hebrew_text_summ" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_plugins" android:key="category_plugins">
        <CheckBoxPreference android:title="@string/enable_api_title" android:key="providerEnabled" android:summary="@string/enable_api_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/tts" android:key="tts" android:summary="@string/tts_summ" android:defaultValue="false" />
        <ListPreference android:entries="@array/dictionary_labels" android:title="@string/dictionary" android:key="dictionary" android:summary="@string/preference_summary_literal" android:defaultValue="0" android:entryValues="@array/dictionary_values" />
        <com.ichi2.preferences.CustomDialogPreference android:title="@string/reset_languages" android:summary="@string/reset_languages_summ" android:dialogTitle="@string/reset_languages" android:dialogMessage="@string/reset_languages_question" android:dialogIcon="@drawable/ic_dialog_alert" android:positiveButtonText="@string/dialog_ok" android:negativeButtonText="@string/dialog_cancel" />
        <CheckBoxPreference android:title="@string/convert_fen_text" android:key="convertFenText" android:summary="@string/convert_fen_text_summ" android:defaultValue="false" />
        <CheckBoxPreference android:id="@id/scrolling_buttons_checkbox" android:title="@string/more_scrolling_buttons" android:key="scrolling_buttons" android:summary="@string/more_scrolling_buttons_summ" android:defaultValue="false" />
        <CheckBoxPreference android:id="@id/double_scrolling_checkbox" android:title="@string/double_scrolling_gap" android:key="double_scrolling" android:summary="@string/double_scrolling_gap_summ" android:defaultValue="false" />
        <Preference android:title="@string/advanced_statistics_title" android:key="advanced_statistics_link" />
        <CheckBoxPreference android:title="@string/html_javascript_debugging" android:key="html_javascript_debugging" android:summary="@string/html_javascript_debugging_summ" android:defaultValue="false" />
    </PreferenceCategory>
    <Preference android:title="@string/about_title" android:key="about_dialog_preference">
        <intent android:targetPackage="com.ichi2.anki" android:targetClass="com.ichi2.anki.Info" />
    </Preference>
</PreferenceScreen>