<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_cat_general" android:summary="@string/pref_cat_general_summ"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/button_sync">
        <Preference android:title="@string/sync_account" android:key="syncAccount" android:summary="@string/sync_account_summ_logged_out" android:dialogTitle="@string/sync_account">
            <intent android:targetPackage="com.ichi2.anki" android:targetClass="com.ichi2.anki.MyAccount" />
        </Preference>
        <CheckBoxPreference android:title="@string/sync_fetch_missing_media" android:key="syncFetchesMedia" android:summary="@string/sync_fetch_missing_media_summ" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/automatic_sync_choice" android:key="automaticSyncMode" android:summary="@string/automatic_sync_choice_summ" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_general">
        <ListPreference android:entries="@array/add_to_cur_labels" android:title="@string/use_current" android:key="useCurrent" android:summary="" android:defaultValue="0" android:entryValues="@array/add_to_cur_values" />
        <ListPreference android:title="@string/language" android:key="language" android:summary="@string/preference_summary_literal" android:defaultValue="0" />
        <CheckBoxPreference android:title="@string/analytics_title" android:key="analyticsOptIn" android:summary="@string/analytics_summ" android:defaultValue="true" />
        <ListPreference android:entries="@array/error_reporting_choice_labels" android:title="@string/error_reporting_choice" android:key="reportErrorMode" android:defaultValue="2" android:entryValues="@array/error_reporting_choice_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_pref">
        <ListPreference android:entries="@array/notification_minimum_cards_due_labels" android:title="@string/notification_pref_title" android:key="minimumCardsDueForNotification" android:defaultValue="1000000" android:entryValues="@array/notification_minimum_cards_due_values" />
        <CheckBoxPreference android:title="@string/notification_minimum_cards_due_vibrate" android:key="widgetVibrate" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/notification_minimum_cards_due_blink" android:key="widgetBlink" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>