<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ankidroid="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_clear_white_24dp" android:id="@id/action_clear_whiteboard" android:visible="false" android:title="@string/clear_whiteboard" ankidroid:showAsAction="always" />
    <item android:icon="@drawable/ic_gesture_white_24dp" android:id="@id/action_hide_whiteboard" android:visible="false" android:title="@string/hide_whiteboard" ankidroid:showAsAction="always" />
    <item android:icon="@drawable/ic_undo_white_24dp" android:enabled="false" android:id="@id/action_undo" android:title="@string/undo" ankidroid:showAsAction="always" />
    <item android:icon="@drawable/ic_star_outline_white_24dp" android:id="@id/action_mark_card" android:title="@string/menu_mark_note" ankidroid:showAsAction="always" />
    <item android:icon="@drawable/ic_mode_edit_white_24dp" android:id="@id/action_edit" android:title="@string/cardeditor_title_edit_card" ankidroid:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_add_white_24dp" android:id="@id/action_add_note_reviewer" android:title="@string/menu_add_note" ankidroid:showAsAction="never" />
    <item android:icon="@drawable/ic_play_circle_white" android:id="@id/action_replay" android:title="@string/replay_audio" ankidroid:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_flip_to_back_white_24dp" android:id="@id/action_bury" android:title="@string/menu_bury" />
    <item android:icon="@drawable/ic_action_suspend" android:id="@id/action_suspend" android:title="@string/menu_suspend" />
    <item android:icon="@drawable/ic_delete_white_24dp" android:id="@id/action_delete" android:title="@string/menu_delete_note" />
    <item android:id="@id/action_search_dictionary" android:visible="false" android:title="@string/menu_select" />
    <item android:icon="@drawable/ic_gesture_white_24dp" android:id="@id/action_enable_whiteboard" android:title="@string/enable_whiteboard" />
    <item android:id="@id/action_open_deck_options" android:title="@string/study_options" />
    <item android:id="@id/action_select_tts" android:visible="false" android:title="@string/select_tts" />
    <item android:icon="@drawable/ic_card_reschedule_white" android:id="@id/action_schedule" android:title="@string/card_editor_card_scheduling">
        <menu />
    </item>
</menu>