<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/pref_cat_general" android:summary="@string/pref_cat_general_summ" android:fragment="com.ichi2.anki.Preferences$SettingsFragment">
        <extra android:name="subscreen" android:value="com.ichi2.anki.prefs.general" />
    </header>
    <header android:title="@string/pref_cat_reviewing" android:summary="@string/pref_cat_reviewing_summ" android:fragment="com.ichi2.anki.Preferences$SettingsFragment">
        <extra android:name="subscreen" android:value="com.ichi2.anki.prefs.reviewing" />
    </header>
    <header android:title="@string/pref_cat_appearance" android:key="appearance_preference_group" android:summary="@string/pref_cat_appearance_summ" android:fragment="com.ichi2.anki.Preferences$SettingsFragment">
        <extra android:name="subscreen" android:value="com.ichi2.anki.prefs.appearance" />
    </header>
    <header android:title="@string/pref_cat_gestures" android:summary="@string/pref_cat_gestures_summ" android:fragment="com.ichi2.anki.Preferences$SettingsFragment">
        <extra android:name="subscreen" android:value="com.ichi2.anki.prefs.gestures" />
    </header>
    <header android:title="@string/pref_cat_advanced" android:key="pref_screen_advanced" android:summary="@string/pref_cat_advanced_summ" android:fragment="com.ichi2.anki.Preferences$SettingsFragment">
        <extra android:name="subscreen" android:value="com.ichi2.anki.prefs.advanced" />
    </header>
</preference-headers>